# subspace

./: .gitignore  CHANGELOG.md  COMMIT_MESSAGES.txt  COMMIT_MESSAGES_FINAL.txt  Cargo.toml  Dockerfile  LOGGING_COMMIT_MESSAGES.txt  README.md  SPECIFICATION.md  bump-version.sh  docker-compose.portainer.yml  docker-compose.yml  package-lock.json  package.json  schema.sql  svelte.config.js  vite.config.js
.github/workflows/: deploy-pages.yml  release.yml
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/output/server/: manifest-full.js
IMPLEMENTATION_DOCS/: ANDROID_BUILD_GUIDE.md  DM_IMPLEMENTATION.md  NEXT_FEATURES.md  REACTIVITY_FIXES.md  SERVER_LOGGING.md  TURN_TESTING_IMPLEMENTATION.md  USER_STATUS_IMPLEMENTATION.md  VOICE_DIAGNOSTICS_IMPLEMENTATION.md
server/: Cargo.toml
server/src/: auth.rs  db.rs  main.rs  ws.rs
server/src/routes/: channels.rs  dms.rs  messages.rs  mod.rs  servers.rs  turn.rs  turn_test.rs  users.rs  version.rs
shared/: Cargo.toml
shared/src/: lib.rs  models.rs  ws_messages.rs
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: api.ts  config.ts  stores.ts  types.ts  webrtc.ts  ws.ts
src/lib/components/: AppShell.svelte  ChannelList.svelte  CloseButton.svelte  CreateServer.svelte  DirectMessages.svelte  DmMessageArea.svelte  EmojiPicker.svelte  Login.svelte  MemberList.svelte  MessageArea.svelte  NoChannelSelected.svelte  PinnedMessages.svelte  ServerSettingsModals.svelte  (+9 more)
src/routes/: +layout.svelte  +page.svelte
(+19 files in other folders)
